vcluster_versioned_docs/version-0.33.0/introduction/oss-vs-free.mdx
---
title: Open Source vs Free tier
sidebar_label: OSS vs Free
sidebar_position: 5
description: Compare vCluster Open Source and Free tier features, understand licensing, and learn how to activate the Free tier
---

import FeatureTable from '@site/src/components/FeatureTable';

# Compare open source and free tiers

vCluster is available as open source under the Apache 2.0 license and in several product tiers with additional features. This page explains the difference between the open source (OSS) and Free tiers, how licensing works, and how to activate the Free tier.

## Overview

**vCluster Open Source** is the foundation of the project. It provides core virtual cluster capabilities: isolated Kubernetes environments, resource syncing, multiple backing stores, and support for k3s, k0s, vanilla Kubernetes, and EKS distributions. OSS requires no license and no Platform connectivity.

**vCluster Free tier** adds capabilities on top of OSS at no cost, including embedded etcd, Private Nodes, custom resource syncing, sync patches, and HostPath Mapper. The Free tier requires connecting to the vCluster Platform for license validation but needs no credit card.

Beyond the Free tier, paid Enterprise tiers (Dev, Prod, Scale) add features like sleep mode, external databases, SSO, audit logging, FIPS compliance, and air-gapped deployments. For pricing details, see the [vCluster Pricing](https://www.vcluster.com/pricing) page.

:::note Sidebar badges
Documentation pages show tier badges in the sidebar: **FREE** (blue) requires Platform activation, **ENTERPRISE** (orange) requires a paid license. Pages without badges are OSS features available to everyone.
:::

## Feature comparison

The following table lists tier-gated features and the plans they apply to. Open source features are not shown here because they are available in all tiers without restriction.

<!--
  FeatureTable names="all" renders every feature defined in features.yaml.
  The sync-feature-tables script preserves this keyword and will not rewrite it.
  Data sources: src/data/features.yaml, src/data/products.yaml
-->

<FeatureTable names="all" />

## How licensing works

The Free tier requires connecting your virtual cluster to the vCluster Platform for license validation. The Platform handles all license management automatically - you don't need to manually configure license keys.

### License validation flow

License validation happens at the Platform level, not within individual virtual clusters:

1. **Platform retrieves license**: The vCluster Platform periodically contacts the Loft License API (`admin.loft.sh`) to retrieve and validate its license. This determines which features are available across all connected virtual clusters.

2. **Virtual cluster connects to Platform**: Each virtual cluster authenticates with the Platform using an access key stored in a Kubernetes Secret. The Platform then provides license information to the virtual cluster.

3. **Features are enabled**: Based on the Platform's license tier (Free, Dev, Prod, or Scale), the virtual cluster enables the appropriate features.

:::info Network requirements
The Platform requires outbound HTTPS access to `admin.loft.sh` for license retrieval. Virtual clusters only need connectivity to the Platform, not to the external license API. For air-gapped environments, see the [air-gapped installation guide](/docs/platform/install/air-gapped).
:::

### What happens during validation

When a virtual cluster starts or reconnects to the Platform:

- The virtual cluster reads its access key from the configured Secret (defaults to `vcluster-platform-api-key` in the virtual cluster's namespace)
- It establishes a secure connection to the Platform
- The Platform validates the access key and returns the current license status
- The virtual cluster enables or disables features based on the license tier

For details on configuring the access key, see [Platform API Key configuration](../configure/vcluster-yaml/platform.mdx).

### Graceful degradation

:::note
Virtual clusters never stop functioning due to license issues. In the worst case, they fall back to the OSS feature set, ensuring your workloads continue running.
:::

If license validation fails:

- **Temporary connectivity issues**: The virtual cluster continues operating with cached license information during brief outages.
- **Expired or invalid license**: Features revert to the OSS tier. Your workloads continue running, but tier-specific features become unavailable.
- **No Platform connection**: Virtual clusters deployed without Platform connectivity operate as OSS from the start.

## Activate the free tier

Activate the vCluster Free tier using these steps:

### Prerequisites

- A Kubernetes cluster (host cluster) where you'll deploy virtual clusters
- kubectl installed and configured
- The vCluster CLI installed

### Step 1: Install the vCluster Platform

Install the vCluster Platform in your Kubernetes cluster. See the [Platform installation guide](/docs/platform/install/quick-start-guide) for detailed instructions. No credit card is required for the Free tier.

### Step 2: Connect your virtual cluster

After installing the Platform, connect existing virtual clusters or create new ones.

**For existing virtual clusters:**

```bash
# Log in to the Platform
vcluster platform login

# Add an existing vCluster to the Platform
vcluster platform add vcluster my-vcluster
```

**For new virtual clusters**, create them through the Platform UI or CLI - Free tier features are automatically enabled.

### Step 3: Deploy with Free tier features

When creating virtual clusters through the Platform, Free tier features like embedded etcd are automatically available:

```yaml title="vcluster.yaml"
# Use embedded etcd (Free tier feature)
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
```

Deploy your virtual cluster:

```bash
vcluster create my-vcluster --values vcluster.yaml
```

### Step 4: Verify Free tier activation

Check that your virtual cluster is connected and licensed in the Platform UI, or use the CLI:

```bash
# List virtual clusters managed by Platform
vcluster platform list vclusters
```

You should see your virtual cluster listed with the Free tier license status.

## Frequently asked questions

### Is the Free tier really free?

Yes, the Free tier is completely free. Creating a vCluster Platform account is required, but no credit card or payment is necessary.

### Can OSS be used in production?

Yes, vCluster OSS is production-ready and many organizations run it successfully. However, paid tiers offer additional features like high availability, advanced security, and enterprise support that are often required for production deployments.

### What happens if a Free tier license expires?

Free tier licenses don't expire as long as the Platform account remains active. If connectivity issues prevent license validation, virtual clusters continue operating with a grace period.

### Can you upgrade from Free to a paid tier?

Yes, upgrades are possible at any time from the vCluster Platform account settings. Existing virtual clusters automatically receive the new license without requiring redeployment.

### Does OSS require platform connectivity?

No, vCluster OSS operates completely independently without requiring any connection to the vCluster Platform. Only Free and paid tiers require Platform connectivity for license validation.

## Next steps

- [Deploy your first virtual cluster](../)
- [Understand vCluster architecture](./architecture.mdx)
- [Configure embedded etcd](../configure/vcluster-yaml/control-plane/components/backing-store/etcd/embedded.mdx)
- [Explore the vCluster Platform](https://www.vcluster.com/platform)
