vcluster_versioned_docs/version-0.35.0/introduction/oss-vs-free.mdx
---
title: Open Source vs Free tier
sidebar_label: OSS vs Free
sidebar_position: 5
description: Compare vCluster Open Source and Free tier features, understand licensing, and learn how to activate the Free tier
---

import FeatureTable from '@site/src/components/FeatureTable';

# Compare open source and free tiers

vCluster is available as open source under the Apache 2.0 license and in several product tiers with additional features. This page explains the difference between the open source (OSS) and Free tiers, how licensing works, and how to activate the Free tier.

## Overview

**vCluster Open Source** is the foundation of the project. It provides full-stack tenant cluster isolation with dedicated Kubernetes control planes, resource syncing, and multiple backing stores. OSS requires no license and no Platform connectivity.

**vCluster Free tier** adds capabilities on top of OSS at no cost, including embedded etcd, Private Nodes, custom resource syncing, sync patches, and HostPath Mapper. The Free tier requires connecting to the vCluster Platform for license validation but needs no credit card.

Beyond the Free tier, paid Enterprise tiers (Dev, Prod, Scale) add features like sleep mode, external databases, SSO, audit logging, FIPS compliance, and air-gapped deployments. For pricing details, see the [vCluster Pricing](https://www.vcluster.com/pricing) page.

:::note Sidebar badges
Documentation pages show tier badges in the sidebar: **FREE** (black) requires Platform activation, **ENTERPRISE** (orange) requires a paid license. Pages without badges are OSS features available to everyone.
:::

## Feature comparison by license plan

This table compares the vCluster license plans, Free, Dev, Prod, and Scale. It does not show open source features, which do not need a license or a Platform connection.

<!--
  FeatureTable names="all" renders every feature defined in features.yaml.
  The sync-feature-tables script preserves this keyword and will not rewrite it.
  Data sources: src/data/features.yaml, src/data/products.yaml
-->

<FeatureTable names="all" />

## How licensing works

The Free tier requires connecting your tenant cluster to the vCluster Platform for license validation. The Platform handles all license management automatically. You don't need to manually configure license keys.

:::info Tier-gated features need the Pro image
Licensing has two parts. The license described below enables a feature, and the Pro image (`ghcr.io/loft-sh/vcluster-pro`, the chart default) contains the code that runs it. The open source image (`ghcr.io/loft-sh/vcluster-oss`) compiles these features out entirely. A Pro image without an attached license crashloops with a "vCluster pro feature" error that seems like a paywall but is really a configuration problem. See [Resolve Pro feature license errors](../troubleshoot/pro-feature-license-error.mdx).
:::

### License validation flow

License validation happens at the Platform level, not within individual tenant clusters:

1. **Platform retrieves license**: The vCluster Platform periodically contacts the Loft License API (`admin.loft.sh`) to retrieve and validate its license. This determines which features are available across all connected tenant clusters.

2. **Tenant cluster connects to Platform**: Each tenant cluster authenticates with the Platform using an access key stored in a Kubernetes Secret. The Platform then provides license information to the tenant cluster.

3. **Features are enabled**: Based on the Platform's license tier (Free, Dev, Prod, or Scale), the tenant cluster enables the appropriate features.

:::info Network requirements
The Platform requires outbound HTTPS access to `admin.loft.sh` for license retrieval. Tenant clusters only need connectivity to the Platform, not to the external license API. For air-gapped environments, see the [air-gapped installation guide](/docs/platform/install/air-gapped).
:::

### What happens during validation

When a tenant cluster starts or reconnects to the Platform:

- The tenant cluster reads its access key from the configured Secret (defaults to `vcluster-platform-api-key` in the tenant cluster's namespace)
- It establishes a secure connection to the Platform
- The Platform validates the access key and returns the current license status
- The tenant cluster enables or disables features based on the license tier

For details on configuring the access key, see [Platform API Key configuration](../configure/vcluster-yaml/platform.mdx).

### Graceful degradation

:::note
A tenant cluster that was previously licensed and then loses Platform connectivity does not stop functioning. In the worst case it falls back to the OSS feature set, ensuring your workloads continue running. This graceful fallback applies to a tenant cluster that has already been licensed. A Pro image that has never received a license Secret crashloops at startup instead. See [Resolve Pro feature license errors](../troubleshoot/pro-feature-license-error.mdx).
:::

If license validation fails:

- **Temporary connectivity issues**: The tenant cluster continues operating with cached license information during brief outages.
- **Expired or invalid license**: Features revert to the OSS tier. Your workloads continue running, but tier-specific features become unavailable.
- **No Platform connection**: Tenant clusters deployed without Platform connectivity operate as OSS from the start.

## Activate the free tier

Activate the vCluster Free tier using these steps:

### Prerequisites

- A Kubernetes cluster (Control Plane Cluster) where you'll deploy tenant clusters
- kubectl installed and configured
- The vCluster CLI installed

### Step 1: Install the vCluster Platform

Install the vCluster Platform in your Kubernetes cluster. See the [Platform installation guide](/docs/platform/install/quick-start-guide) for detailed instructions. No credit card is required for the Free tier.

### Step 2: Connect your tenant cluster

After installing the Platform, connect existing tenant clusters or create new ones.

**For existing tenant clusters:**

```bash
# Log in to the Platform
vcluster platform login

# Add an existing vCluster to the Platform
vcluster platform add vcluster my-vcluster
```

**For new tenant clusters**, create them through the Platform UI or CLI - Free tier features are automatically enabled.

### Step 3: Deploy with Free tier features

When creating tenant clusters through the Platform, Free tier features like embedded etcd are automatically available:

```yaml title="vcluster.yaml"
# Use embedded etcd (Free tier feature)
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
```

Deploy your tenant cluster:

```bash
vcluster create my-vcluster --values vcluster.yaml
```

### Step 4: Verify Free tier activation

Check that your tenant cluster is connected and licensed in the Platform UI, or use the CLI:

```bash
# List virtual clusters managed by Platform
vcluster platform list vclusters
```

You should see your tenant cluster listed with the Free tier license status.

## Frequently asked questions

### Is the Free tier really free?

Yes, the Free tier is completely free. Creating a vCluster Platform account is required, but no credit card or payment is necessary.

### Can OSS be used in production?

Yes, vCluster OSS is production-ready and deployed by platform teams worldwide. Paid tiers add high availability, external database support, SSO, audit logging, and enterprise support — capabilities that larger-scale platform deployments typically require.

### What happens if a Free tier license expires?

Free tier licenses don't expire as long as the Platform account remains active. If connectivity issues prevent license validation, tenant clusters continue operating with a grace period.

### Can you upgrade from Free to a paid tier?

Yes, upgrades are possible at any time from the vCluster Platform account settings. Existing tenant clusters automatically receive the new license without requiring redeployment.

### Does OSS require platform connectivity?

No, vCluster OSS operates completely independently without requiring any connection to the vCluster Platform. Only Free and paid tiers require Platform connectivity for license validation.

## Next steps

- [Deploy your first tenant cluster](../quick-start/overview.mdx)
- [Understand vCluster architecture](./architecture.mdx)
- [Configure embedded etcd](../configure/vcluster-yaml/control-plane/components/backing-store/etcd/embedded.mdx)
- [Explore the vCluster Platform](https://www.vcluster.com/platform)
